<resources>
    <string name="app_name">Quick Stocks</string>

    <!--activity_home-->

    <string name="txtSymbol">Symbol: </string>
    <string name="inpSymbolHint">ABCD</string>
    <string name="txtOptions">Options: </string>

    <string name="btnLookup">Get Stock Information</string>
    <string name="btnSearch">Search Stock Symbols</string>

    <string name="optionsHeader">Search Options</string>

    <string name="txtStartDate">Start Date: </string>
    <string name="txtEndDate">End Date: </string>

    <string name="txtOrderBy">Order By: </string>
    <string name="radRecent">Most Recent</string>
    <string name="radOldest">Oldest</string>

    <string name="txtChartRange">Frequency:</string>
    <string name="radDaily">Daily</string>
    <string name="radWeekly">Weekly</string>
    <string name="radMonthly">Monthly</string>
    <string name="radQuarterly">Quarterly</string>
    <string name="radYearly">Yearly</string>

    <!--activity_search-->

    <string name="txtSearchInstructions">Enter a company name or a partial symbol below to search for its symbol(s). Results will be displayed at the bottom of this page.</string>
    <string name="txtCompany">Input: </string>
    <string name="inpCompanyHint">Company/Partial Symbol</string>
    <string name="btnSearchThis">Search for Symbols</string>
    <string name="btnReturnSearch">Return Search Result</string>
    <string name="txtSearchResults">Search Results</string>

    <!--activity_display-->

    <string name="btnPrevious">Previous</string>
    <string name="btnGoTo">Go To</string>
    <string name="btnNext">Next</string>
    <string name="txtActualData">Actual Data</string>
    <string name="txtDivSplit">Dividend and Split Adjusted Data</string>

</resources>
