<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".SearchActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:text="@string/txtSearchInstructions"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/txtCompany"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inpSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/inpCompanyHint"
                        android:inputType="textPersonName"
                        android:maxLength="30" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnSearchThis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSearchThis"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnReturnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnReturnSearch"
                android:textAllCaps="false"
                android:enabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:text="@string/txtSearchResults"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>